tests/typecheck/fail/generic_body_return_mismatch.tw
// Error: the body of a generic function must type-check against its declared return type.
// `x` has type A but the function claims to return Int — unsound coercion.

fn bad<A>(x: A) Int { x }
